name:             drunken-bishop
version:          0.1.0.0
synopsis:         An implementation of the Drunken Bishop visualization algorithm
-- description:
license:          BSD3
license-file:     LICENSE
author:           Getty Ritter <gdritter@galois.com>
maintainer:       Getty Ritter <gdritter@galois.com>
copyright:        ©2016 Getty Ritter
-- category:
build-type:       Simple
cabal-version:    >= 1.14

library
  exposed-modules:     Data.Digest.DrunkenBishop
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <4.10
                     , array
                     , bytestring
                     , pureMD5
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings,
                       ScopedTypeVariables

executable drunken-bishop
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base >=4.7 && <4.10
                     , drunken-bishop
                     , bytestring
  default-language:    Haskell2010
