name:             drunken-bishop
version:          0.1.0.0
synopsis:         An implementation of the Drunken Bishop visual fingerprinting algorithm
description: The [Drunken Bishop](http://www.dirk-loss.de/sshvis/drunken_bishop.pdf)
             algorithm is a visual fingerprinting algorithm originally
             implemented by OpenSSH for visualizing key fingerprints. This
             package implements OpenSSH's visualization while also offering
             extra configuration to allow for specialized use.
license:          BSD3
license-file:     LICENSE
author:           Getty Ritter <gdritter@galois.com>
maintainer:       Getty Ritter <gdritter@galois.com>
copyright:        ©2020 Getty Ritter
-- category:
build-type:       Simple
cabal-version:    >= 1.14

library
  exposed-modules:     Data.Digest.DrunkenBishop
  ghc-options:         -Wall -Werror
  build-depends:       base >=4.7 && <5
                     , array
                     , bytestring
                     , pureMD5
  default-language:    Haskell2010

executable drunken-bishop
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall -Werror
  build-depends:       base >=4.7 && <5
                     , drunken-bishop
                     , bytestring
                     , cryptohash-sha256
  default-language:    Haskell2010
